--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="result_not_found">This is not a valid QR code</string>
+    <string name="storage_file">totp_storage</string>
 </resources>
